# data-agents-in-production

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/chapter-script-tester/: SKILL.md
config/: chinook_schema.json  default.yaml
data/: global_knowledge.json  schema_linking_train_small.jsonl  schema_linking_train_tiny.jsonl  schema_linking_val.jsonl  schema_linking_val_small.jsonl  schema_linking_val_tiny.jsonl  sql_test_sample.jsonl  sql_train.jsonl  sql_train_small.jsonl  sql_val.jsonl  sql_val_small.jsonl  triage_test.jsonl  triage_train.jsonl  triage_val.jsonl  wandb_grpo_schema_linking.json
data/chinook/: 01_chinook.sql  02_fewshot_schema.sql  03_mdl_schema.sql
data/chinook_dbt/: institutional_knowledge.txt
data/chinook_dbt/models/marts/: customer_lifetime_value.sql  monthly_revenue.sql
data/chinook_dbt/models/staging/: stg_customer.sql  stg_invoice.sql
data/mdl/: chinook.json
evals/: __init__.py  baseline_results.json  chapter_2_2_results.json  chapter_2_3_results.json  chapter_2_4_results.json  chapter_2_5_results.json  chinook_golden_set.csv  chinook_golden_set.py  golden_set.py  metrics.py  retrieval_metrics.py  runner.py  sql_components.py
scripts/: generate_chinook_schema.py  index_fewshot_examples.py  run_chapter_1_5.py  run_chapter_2_1.py  run_chapter_2_2.py  run_chapter_2_3.py  run_chapter_2_4.py  run_chapter_2_5.py  run_chapter_2_6.py  run_chapter_2_7.py  run_chapter_2_8.py  run_chapter_3_1.py  run_chapter_3_2.py  run_chapter_3_3.py  run_chapter_3_4.py  run_chapter_3_5.py  run_chapter_3_6.py  run_chapter_3_7.py  run_chapter_3_8.py  run_chapter_4A_1.py  run_chapter_4A_2.py  run_chapter_4B_1.py  run_chapter_4B_2.py  run_chapter_4C_1.py  run_chapter_4C_2.py  run_chapter_4C_3.py  run_chapter_4D.py  run_context_pipeline.py  setup_chinook.py
scripts/chapter_3_2/: __init__.py  anonymizer.py  core.py  detector.py  pii_mappings.db  storage.py
scripts/chapter_3_7/: __init__.py  __main__.py  a2ui_examples.py  a2ui_schema.py  agent.py  agent_executor.py  prompt_builder.py  sql_session_manager.py  tools.py
scripts/chapter_3_7/A2UI/: .geminiignore  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yaml  requirements-docs.txt
scripts/chapter_3_7/A2UI/.gemini/: GEMINI.md  README.md  config.yaml  styleguide.md
scripts/chapter_3_7/A2UI/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
scripts/chapter_3_7/A2UI/.github/workflows/: check_private_index.yml  docs.yml  editor_build.yml  inspector_build.yml  lit_samples_build.yml  ng_build_and_test.yml  python_a2ui_agent_build_and_test.yml  python_samples_build.yml  web_build_and_test.yml
scripts/chapter_3_7/A2UI/a2a_agents/java/: pom.xml
scripts/chapter_3_7/A2UI/a2a_agents/python/a2ui_agent/: README.md  pyproject.toml
scripts/chapter_3_7/A2UI/a2a_agents/python/a2ui_agent/src/a2ui/extension/: __init__.py  a2ui_extension.py  a2ui_schema_utils.py  send_a2ui_to_client_toolset.py
scripts/chapter_3_7/A2UI/a2a_agents/python/a2ui_agent/tests/extension/: test_a2ui_extension.py  test_a2ui_schema_utils.py  test_send_a2ui_to_client_toolset.py
scripts/chapter_3_7/A2UI/docs/: agents.md  community.md  composer.md  index.md  quickstart.md  renderers.md  roadmap.md  transports.md
scripts/chapter_3_7/A2UI/docs/concepts/: components.md  data-binding.md  data-flow.md  overview.md
scripts/chapter_3_7/A2UI/docs/guides/: agent-development.md  client-setup.md  custom-components.md  renderer-development.md  theming.md
scripts/chapter_3_7/A2UI/docs/introduction/: agent-ui-ecosystem.md  how-to-use.md  what-is-a2ui.md  where-is-it-used.md  who-is-it-for.md
scripts/chapter_3_7/A2UI/docs/reference/: components.md  messages.md
scripts/chapter_3_7/A2UI/renderers/flutter/: README.md
scripts/chapter_3_7/A2UI/samples/agent/adk/mcp/: README.md  __main__.py  pyproject.toml  recipe_a2ui.json  server.py
scripts/chapter_3_7/A2UI/samples/personalized_learning/agent/: __init__.py  a2ui_templates.py  agent.py  context_loader.py  download_openstax.py  openstax_chapters.py  openstax_content.py  openstax_modules.py  pyproject.toml  requirements.txt
scripts/chapter_4A/: agent_rollout.py  reward.py  run_apo.py
scripts/chapter_4B/: finetune_text2sql.ipynb  grpo_schema_linking.ipynb
scripts/chapter_4C/: evaluate_sql.py  reward_schema_linking.py  reward_sql.py  schema_linking_prompt.txt  train_grpo_schema_linking.py  train_grpo_sql.py  train_prompt.txt
scripts/data/: augment_dataset.py  generate_sql_data.py  merge_golden_set.py  prepare_schema_linking_data.py
src/: __init__.py
src/adapters/: __init__.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py
src/agent/: __init__.py  cli.py  error_classifier.py  graph.py  repair.py  retry.py
src/ambiguity/: __init__.py  detector.py  lexical.py  scope.py  temporal.py
src/api/: __init__.py  server.py
src/api/templates/: index.html
src/authorization/: __init__.py  budget.py  column_filter.py  policies.py  row_filter.py
src/chart/: __init__.py  generator.py  models.py
src/context/: __init__.py  pronouns.py  session.py
src/execution/: __init__.py  runner.py
src/observability/: __init__.py  annotation.py  datasets.py  evaluators.py  tracing.py
src/pii/: __init__.py  aggregate_detector.py  detector.py  pseudonymizer.py
src/reasoning/: __init__.py  generator.py  parser.py  prompts.py  selector.py
src/retrieval/: __init__.py  chinook_examples.py  models.py  pgvector_store.py  reranker.py  retriever.py  rrf.py
src/schema/: __init__.py  cache.py  enrichment.py  hybrid_store.py  hybrid_tools.py  models.py  render.py  store.py  tools.py
src/security/: __init__.py  audit.py  input_sanitizer.py  jit_permissions.py  mcp_firewall.py  output_filter.py  tool_verification.py
src/structured/: __init__.py  generator.py  models.py
src/utils/: __init__.py  config.py
src/validators/: __init__.py  safety_validator.py  schema_validator.py
src/vllm_plugins/: qwen25_coder_parser.py
tests/: __init__.py  conftest.py  test_adapters.py  test_config.py  test_tool_parser.py
(+277 files in other folders)
