[project]
name = "data-agents-in-production"
version = "0.1.0"
description = "Companion code for Data Agents in Production (Manning)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yi Ai", email = "yi@example.com"}
]
keywords = ["text-to-sql", "llm", "agent", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=1.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-google-genai>=4.2.1",
    "openai>=2.30.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "faiss-cpu>=1.13.2",
    "rank-bm25>=0.2.2",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "structlog>=25.5.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pandas>=3.0.2",
    "sqlglot>=30.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
]
apo = [
    "agentlightning[apo]",
    "sqlglot>=26.0.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.11.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
]
grpo = [
    "agentlightning[apo,verl]",
    "sqlglot>=26.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "vllm>=0.8.5,<=0.12.0",
    "prisma>=0.13.0",
]

[project.entry-points."vllm.general_plugins"]
qwen25_coder_parser = "src.vllm_plugins.qwen25_coder_parser:register"

[project.scripts]
sql-agent = "src.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
