[project]
name = "a2ui-agent"
version = "0.1.0"
description = "A2UI Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "a2a-sdk>=0.3.0",
  "google-adk>=1.8.0",
  "google-genai>=1.27.0",
  "jsonschema>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2ui"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pyink]
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyink>=24.10.0",
]
