[project]
name = "a2ui-mcp-demo"
version = "0.1.0"
description = "A demo of A2UI running over MCP"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "automation", "a2ui", "agent"]
license = { text = "MIT" }
dependencies = ["anyio>=4.5", "click>=8.2.0", "httpx>=0.27", "mcp", "a2ui-agent"]

[project.scripts]
a2ui-mcp-demo = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true


[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]

[tool.uv.sources]
a2ui-agent = { path = "../../../../a2a_agents/python/a2ui_agent", editable = true }

